Fixes bad positioning of countdown element relative to message component and aligns it to bottom left for proper display.

--- a/addon/styles/components/notification-message.css
+++ b/addon/styles/components/notification-message.css
@@ -79,6 +79,7 @@
 .c-notification__countdown {
   position: absolute;
   bottom: 0;
+  left: 0;
   background-color: --countdown-lighten-background;
   width: 0;
   height: 4px;
